snander (1.7.3-1) UNRELEASED; urgency=medium

  * Add BH25D80 SPI Nor Flash chip support.

 -- McMCC <mcmcc@mail.ru>  Mon, 19 July 2021 04:20:12 +0800