@@ -221,33 +221,34 @@ SPI NAND Flash Support List:
 046. HEYANG HYF2GQ4UDACAE
 047. PN PN26G01A-X
 048. PN PN26G02A-X
-049. ATO ATO25D1GA
-050. ATO ATO25D2GA
-051. ATO ATO25D2GB
-052. FM FM25S01
-053. FM FM25S01A
-054. FM FM25G01B
-055. FM FM25G02B
-056. FM FM25G02C
-057. FM FM25G02
-058. XTX XT26G02B
-059. XTX XT26G01A
-060. XTX XT26G02A
-061. MIRA PSU1GS20BN
-062. BIWIN BWJX08U
-063. BIWIN BWET08U
-064. FORESEE FS35ND01GD1F1
-065. FORESEE FS35ND01GS1F1
-066. FORESEE FS35ND02GS2F1
-067. FORESEE FS35ND02GD1F1
-068. DS DS35Q2GA
-069. DS DS35Q1GA
-070. FISON CS11G0T0A0AA
-071. FISON CS11G1T0A0AA
-072. FISON CS11G0G0A0AA
-073. TYM TYM25D2GA01
-074. TYM TYM25D2GA02
-075. TYM TYM25D1GA03
+049. PN PN26Q01A-X
+050. ATO ATO25D1GA
+051. ATO ATO25D2GA
+052. ATO ATO25D2GB
+053. FM FM25S01
+054. FM FM25S01A
+055. FM FM25G01B
+056. FM FM25G02B
+057. FM FM25G02C
+058. FM FM25G02
+059. XTX XT26G02B
+060. XTX XT26G01A
+061. XTX XT26G02A
+062. MIRA PSU1GS20BN
+063. BIWIN BWJX08U
+064. BIWIN BWET08U
+065. FORESEE FS35ND01GD1F1
+066. FORESEE FS35ND01GS1F1
+067. FORESEE FS35ND02GS2F1
+068. FORESEE FS35ND02GD1F1
+069. DS DS35Q2GA
+070. DS DS35Q1GA
+071. FISON CS11G0T0A0AA
+072. FISON CS11G1T0A0AA
+073. FISON CS11G0G0A0AA
+074. TYM TYM25D2GA01
+075. TYM TYM25D2GA02
+076. TYM TYM25D1GA03
 
 SPI NOR Flash Support List:
 001. AT25DF321
